--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,34 @@ body {
     margin-bottom: 30px;
 }
 
+.menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu-button {
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white;
+    border: none;
+    cursor: pointer;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 30px;
+    width: 300px;
+    font-size: 28px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.menu-button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.menu-button:active {
+    transform: scale(0.95);
+}
+
 .menu-sections {
     display: flex;
     flex-wrap: wrap;
@@ -56,15 +84,13 @@ body {
     color: #00c8ff;
 }
 
-.menu-section ul li {
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: start;
-    align-items: center;
+.menu-section ul li span {
+    display: inline-block;
 }
 
-.menu-section ul li div:first-child {
-    margin-right: 10px;
+.menu-section ul li span:first-child {
+    width: 250px; /* This value may be adjusted to create the desired space. */
+    text-align: left;
 }
 
 a {
@@ -76,7 +102,13 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
-    .menu-section ul li {
-        grid-template-columns: 1fr;
+    .menu-button {
+        width: 80%;
+        padding: 15px;
+        font-size: 22px;
+    }
+
+    .menu-section ul li span:first-child {
+        width: auto;
     }
 }
