--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
     margin: 0;
 }
 
@@ -15,12 +14,14 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
+    margin-top: 20px;
 }
 
 .logo {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .logo img {
@@ -30,38 +31,10 @@ body {
     margin-bottom: 30px;
 }
 
-.menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.menu-button {
-    background-color: rgba(0, 0, 0, 0.5); 
-    color: white;
-    border: none;
-    cursor: pointer;
-    display: block;
-    text-align: center;
-    margin-bottom: 20px;
-    padding: 30px;
-    width: 300px;
-    font-size: 28px;
-    transition: background-color 0.3s, transform 0.3s;
-}
-
-.menu-button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.menu-button:active {
-    transform: scale(0.95);
-}
-
 .menu-sections {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0;
     margin: 0;
     color: white;
@@ -89,7 +62,7 @@ body {
 }
 
 .menu-section ul li span:first-child {
-    width: 250px; /* This value may be adjusted to create the desired space. */
+    width: 250px;
     text-align: left;
 }
 
@@ -99,6 +72,35 @@ a {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.menu-button {
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white;
+    border: none;
+    cursor: pointer;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 30px;
+    width: 300px;
+    font-size: 28px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.menu-button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.menu-button:active {
+    transform: scale(0.95);
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centrera knapparna horisontellt */
+    margin-top: 20px; /* Separation från loggan */
 }
 
 @media only screen and (max-width: 768px) {
