--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,25 @@
 body {
-    background-image: url('background.png');
-    background-repeat: no-repeat; /* Förhindra upprepning av bakgrundsbilden */
-    background-size: contain; /* Begränsa till bildens storlek */
-    background-attachment: fixed; /* Fixera bakgrundsbilden så den inte rullar med sidan */
+    background-image: url('Marble.jpg');
+    background-repeat: repeat;
+    background-size: contain;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin: 0;
     height: 100%;
+    position: relative;
+    z-index: 0;
 }
 
-.center-container {
+.content {
+    position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    width: 100%;
-    margin-top: 20px;
+    align-items: center;
+    z-index: 2;
 }
 
 .logo {
@@ -34,6 +36,15 @@ body {
     margin-bottom: 30px;
 }
 
+.shisha-image {
+    position: absolute;
+    width: auto;
+    height: auto;
+    z-index: 1;
+}
+
+
+
 .menu-sections {
     display: flex;
     flex-wrap: wrap;
@@ -41,6 +52,8 @@ body {
     padding: 0;
     margin: 0;
     color: white;
+    z-index: 2
+;
 }
 
 .menu-section {
