--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-html, body {
-    height: 100vh; /* Sätter höjden till 100% av skärmens synliga höjd */
-    overflow: auto; /* Tillåter skrollning endast om innehållet överstiger 100vh */
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-image: url('Marble.jpg');
     background-repeat: repeat;
@@ -50,18 +43,17 @@ body {
     z-index: 1;
 }
 
-
-
 .menu-sections {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;  /* Lägg till detta */
+    align-items: center;     /* Lägg till detta */
     justify-content: center;
     padding: 0;
     margin: 0;
     color: white;
-    z-index: 2
-;
+    z-index: 2;
 }
+
 
 .menu-section {
     flex-basis: 45%;
@@ -78,20 +70,20 @@ body {
 .menu-section h2 {
     font-size: 24px;
     color: #00c8ff;
-    text-shadow: 1px 1px 2px rgb(0, 234, 255); /* Lägger till en skuggning runt menyrubrikerna */
-    padding: 5px 10px; /* Lägger till lite padding för att öka synligheten */
+    text-shadow: 1px 1px 2px rgb(0, 234, 255);
+    padding: 5px 10px;
+}
+
+.menu-section ul li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .menu-section ul li span {
-    display: inline-block;
-    text-shadow: 1px 1px 2px rgb(0, 255, 238); /* Lägger till en skuggning runt produkterna i menyn */
-    padding: 5px 10px; /* Lägger till lite padding för att öka synligheten */
-}
-
-
-.menu-section ul li span:first-child {
-    width: 250px;
-    text-align: left;
+    display: inline-flex;
+    text-shadow: 1px 1px 2px rgb(0, 255, 238);
+    padding: 5px 10px;
 }
 
 a {
@@ -105,9 +97,9 @@ a {
 .menu {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centrera knapparna horisontellt */
-    justify-content: center; /* Centrera knapparna vertikalt */
-    height: 100vh; /* Sätt en höjd på förälderkontainern (t.ex. hela skärmens höjd) */
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .menu-button {
